# fixedpointmath

./: .gitignore  Cargo.toml
crates/fixedpointmath/: Cargo.toml
crates/fixedpointwasm/: Cargo.toml  README.md  package.json  tsconfig.json
crates/fixedpointwasm/src/: formatting.rs  lib.rs  utils.rs
