[package]
name = "fixedpointmath"
edition = "2021"
version = "0.19.0"
authors = [
    "Ryan Goree <ryan@delv.tech>",
    "Alex Towle <alex@delv.tech>",
]
readme = "README.md"
license = "Apache-2.0"
description = "Fixed point math in rust, based on FixedPointMath.sol"

[dependencies]
ethers = { version = "2.0.11", default-features = false }
eyre = "0.6.8"
paste = "1.0.15"
rand = "0.8.5"

[dev-dependencies]
ethers = "2.0.11"
test-utils = { git = "https://github.com/delvtech/hyperdrive-rs" tag = "v0.18.1" }
tokio = { version = "1", features = ["full"] }
